# vim: set noexpandtab:

2013-06-24 Steve
	* Turned on m_selectTaus by default

2013-06-22 Matt
	* Changed passDeadRegions Pt threshold 30-->40 following 2Lep update.

2013-06-21 Steve
	* Fixed position of tau overlap removal
		* Slight mistake introduced on 2013-06-10 commit below

2013-06-20 Davide
	* Add the counters to correct for events with the SUSY propagator bug
	* Tagging SusyNtuple-00-01-01

2013-06-19 Steve
	* Tagging SusyNtuple-00-01-00

2013-06-18 Steve
	* Updates for p1512 D3PDs
		* Had to update VarHandle
		* Had to add D3PDReadStats, D3PDPerfStats, Utils.
		  Got weird errors otherwise

2013-06-18 Steve
	* Tagging SusyNtuple-00-00-60

2013-06-18 Matt
	* Moved to cutting on ptcone30ElStyle for muons for 2 lep analysis.
	* Updated btag sf and the bTagSF method

2013-06-17 Steve
	* Object selection updates for 3L
		* Both 2L/3L now using unbiased IP
		* Signal jets now require jvf>0.5 only for jets with pt<50 and |detEta|<2.4
			* Still keeping pt>20 and |eta|<2.5 otherwise
	* Cleaned up isSignal ele and mu methods
	* Added new D3PDTag enum value D3PD_p1512

2013-06-10 Steve
	* Corrected overlap removal with taus (thanks Estel)
		* Removal of taus from leptons done before lep-jet OR
		* Removal of jets from taus is still kept at the end

2013-06-10 Steve
	* Added control for ID level of all three tau selection cuts: jetBDT, eleBDT, muVeto
	* Commented out getSignalObjects method which doesn't save baseline objects
		* Baseline objects are needed for cleaning cuts
	* Modified default tau selection
		* Baseline and signal taus are the same: medium ID with loose ele BDT
			* These taus are used for the overlap removal!
		* Tight taus have all tight ID
	* Modified overlap removal prescription
		* Tau overlap done last to de-couple taus and leptons for consistent bkg estimations
	* Tagging SusyNtuple-00-00-59

2013-06-07 Steve
	* Added preElectrons, preMuons, preJets vectors to SusyNtAna