@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-06-26 Steve
+	* Added event trigger cut to TrilTrigLogic
+
 2013-06-24 Steve
 	* Turned on m_selectTaus by default
 
